feat: caching tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,27 @@ jobs:
         with:
           fetch-depth: 0
           clean: true
+      - name: Restore caches from host
+        run: |
+          set -e
+          echo "--- Restoring Nix cache from host ---"
+          if [ -d /tmp/nix-cache/store ]; then
+            echo "Nix cache found. Restoring..."
+            sudo rsync -a /tmp/nix-cache/ /nix/
+          else
+            echo "No Nix cache found. Will be created after build."
+          fi
+
+          echo "--- Restoring Rust cache from host ---"
+          if [ -d /tmp/rust-cache ]; then
+            echo "Rust cache found. Restoring..."
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+            rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+            rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+            rsync -a /tmp/rust-cache/target/ ./target/
+          else
+            echo "No Rust cache found. Will be created after build."
+          fi
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -45,15 +66,6 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
       - name: build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: test
@@ -62,6 +74,20 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: formatting
         run: nix develop -c bash -c "cargo fmt --check"
+      - name: Save caches to host
+        if: always()
+        run: |
+          set -e
+          echo "--- Saving Nix store to host cache ---"
+          sudo mkdir -p /tmp/nix-cache
+          sudo nix-store --gc
+          sudo rsync -a --delete /nix/store/ /tmp/nix-cache/store/
+
+          echo "--- Saving Rust cache to host cache ---"
+          mkdir -p /tmp/rust-cache
+          rsync -a --delete ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+          rsync -a --delete ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+          rsync -a --delete ./target/ /tmp/rust-cache/target/
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
@@ -261,6 +287,12 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
+      - name: Cache cargo target dir
+        uses: actions/cache@v3
+        with:
+          path: |
+            target
+          key: ${{ runner.os }}-cargo-target-${{ hashFiles('Cargo.lock') }}
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: Build chain specs
@@ -487,6 +519,12 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
+      - name: Cache cargo target dir
+        uses: actions/cache@v3
+        with:
+          path: |
+            target
+          key: ${{ runner.os }}-cargo-target-${{ hashFiles('Cargo.lock') }}
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: Test
