--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -4,11 +4,9 @@ components = [
 	"cargo",
 	"clippy",
 	"rust-analyzer",
-	"rust-src",
-	"rust-std",
 	"rustc-dev",
 	"rustc",
 	"rustfmt",
 ]
-targets = ["wasm32-unknown-unknown"]
+targets = ["wasm32v1-none"]
 profile = "minimal"
