--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -24,7 +24,7 @@ frame-system = { workspace = true }
 sp-std = { workspace = true }
 sp-runtime = { workspace = true }
 sp-core = { workspace = true }
-sp-session-validator-management = { workspace = true }
+sp-session-validator-management = { workspace = true, features = ["serde"] }
 sp-io = { workspace = true, optional = true }
 sidechain-domain = { workspace = true }
 derive-new = { workspace = true, optional = true }
