--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,10 @@ jobs:
         run: nix develop -c bash -c "cargo fmt --check"
       - name: ls -la
         run: ls -la
+      - name: ls /tmp
+        run: ls /tmp
+      - name: touch /tmp/testfile
+        run: touch /tmp/testfile
       - name: Save Rust cache to host
         if: always()
         run: |
