--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,18 +60,14 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: build
+      - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
-      - name: test
+      - name: Test
         run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-      - name: lint
+      - name: Lint
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-      - name: formatting
+      - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
-      - name: ls -la
-        run: ls -la /tmp
-      - name: touch /tmp/testfile2 and chmod 777
-        run: touch /tmp/testfile2 && chmod 777 /tmp/testfile2
       - name: Save Rust cache to host
         if: always()
         run: |
@@ -89,7 +85,7 @@ jobs:
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
       #    command: check licenses
-      - name: build chain specs
+      - name: Build chain specs
         run: |
             source ./dev/envs/devnet/.envrc
             target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
