feat: Implement rust caching for CI builds on /tmp/ runner mount

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,21 @@ jobs:
         with:
           fetch-depth: 0
           clean: true
+      - name: Restore Rust cache from host
+        run: |
+          set -e
+          echo "--- Restoring Rust cache from host ---"
+          if [ -d /tmp/rust-cache ]; then
+            echo "Rust cache found. Restoring..."
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+            nix shell nixpkgs#rsync -c bash -c "
+              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+              rsync -a /tmp/rust-cache/target/ ./target/
+            "
+          else
+            echo "No Rust cache found. Will be created after build."
+          fi
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -45,28 +60,32 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-      - name: build
+      - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
-      - name: test
+      - name: Test
         run: nix develop -c bash -c "cargo test --locked --profile=release --features=runtime-benchmarks"
-      - name: lint
+      - name: Lint
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
-      - name: formatting
+      - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
+      - name: Save Rust cache to host
+        if: always()
+        run: |
+          set -e
+          echo "--- Saving Rust cache to host cache ---"
+          mkdir -p /tmp/rust-cache
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a ./target/ /tmp/rust-cache/target/
+          "
+          echo "--- Verifying cache contents ---"
+          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
       #    command: check licenses
-      - name: build chain specs
+      - name: Build chain specs
         run: |
             source ./dev/envs/devnet/.envrc
             target/release/partner-chains-demo-node build-spec --chain local --disable-default-bootnode > devnet_chain_spec.json
@@ -234,6 +253,21 @@ jobs:
           fetch-depth: 0
           ref: master
           clean: true
+      - name: Restore Rust cache from host
+        run: |
+          set -e
+          echo "--- Restoring Rust cache from host ---"
+          if [ -d /tmp/rust-cache ]; then
+            echo "Rust cache found. Restoring..."
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+            nix shell nixpkgs#rsync -c bash -c "
+              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+              rsync -a /tmp/rust-cache/target/ ./target/
+            "
+          else
+            echo "No Rust cache found. Will be created after build."
+          fi
       - name: Get current commit SHA
         id: get_sha
         run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
@@ -252,15 +286,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: Build chain specs
@@ -284,7 +309,19 @@ jobs:
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:${{ steps.get_sha.outputs.sha }}
           docker push ${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node:latest
           docker push ghcr.io/${{ github.repository }}/partner-chains-node-unstable:latest
-
+      - name: Save Rust cache to host
+        if: always()
+        run: |
+          set -e
+          echo "--- Saving Rust cache to host cache ---"
+          mkdir -p /tmp/rust-cache
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a ./target/ /tmp/rust-cache/target/
+          "
+          echo "--- Verifying cache contents ---"
+          ls -laR /tmp/rust-cache
       - name: Rename artifact
         run: |
           cp ./partner-chains-demo-node partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
@@ -469,6 +506,21 @@ jobs:
           fetch-depth: 0
           ref: ${{ inputs.sha }}
           clean: true
+      - name: Restore Rust cache from host
+        run: |
+          set -e
+          echo "--- Restoring Rust cache from host ---"
+          if [ -d /tmp/rust-cache ]; then
+            echo "Rust cache found. Restoring..."
+            mkdir -p ~/.cargo/git ~/.cargo/registry ./target
+            nix shell nixpkgs#rsync -c bash -c "
+              rsync -a /tmp/rust-cache/cargo-git/ ~/.cargo/git/
+              rsync -a /tmp/rust-cache/cargo-registry/ ~/.cargo/registry/
+              rsync -a /tmp/rust-cache/target/ ./target/
+            "
+          else
+            echo "No Rust cache found. Will be created after build."
+          fi
       - name: Acquire AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -478,15 +530,6 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ${{ secrets.ECR_REGISTRY_SECRET }}
-      - name: Cache cargo build
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry/
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
       - name: Build
         run: nix develop -c bash -c "cargo build --locked --profile=release"
       - name: Test
@@ -495,6 +538,19 @@ jobs:
         run: nix develop -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --all-targets --all-features"
       - name: Formatting
         run: nix develop -c bash -c "cargo fmt --check"
+      - name: Save Rust cache to host
+        if: always()
+        run: |
+          set -e
+          echo "--- Saving Rust cache to host cache ---"
+          mkdir -p /tmp/rust-cache
+          nix shell nixpkgs#rsync -c bash -c "
+            rsync -a ~/.cargo/git/ /tmp/rust-cache/cargo-git/
+            rsync -a ~/.cargo/registry/ /tmp/rust-cache/cargo-registry/
+            rsync -a ./target/ /tmp/rust-cache/target/
+          "
+          echo "--- Verifying cache contents ---"
+          ls -laR /tmp/rust-cache
       #- name: Run cargo-deny to check licenses
       #  uses: EmbarkStudios/cargo-deny-action@v1
       #  with:
