--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -56,6 +56,7 @@ tokio-test = "0.4.3"
 ctor = "0.4.1"
 testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
 pretty_assertions = { workspace = true }
+paste = { workspace = true }
 
 [features]
 default = []
