--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -47,6 +47,7 @@ pallet-sidechain = { workspace = true, features = ["std"] }
 pallet-governed-map = { workspace = true, features = ["std"] }
 sp-governed-map = { workspace = true, features = ["std"] }
 sidechain-slots = { workspace = true }
+authority-selection-inherents = { workspace = true, features = ["std"] }
 
 [dev-dependencies]
 frame-system = { workspace = true }
