feat(cli): add automatic-generate-keys command and improve key generation UX
- Introduced  command to partner-chains-cli:
  - Generates and saves session keys by connecting to a running node via RPC ()
  - Decodes session keys using the runtime API, supports modern and legacy formats, and saves to keystore and JSON
  - Provides fallback and error handling for various runtime formats
- Integrated the new command into the CLI as an alternative to  for all roles (Governance Authority, Registered Validator, Permissioned Validator)
- Updated CLI help message and workflow documentation to clearly present both key generation methods and when to use each
- Added comprehensive test suite for SCALE decoding and key handling logic
- Updated changelog with details of the new feature and related improvements
- Updated Cargo.toml and workspace dependencies for ,  (with serde), and related requirements

--- a/toolkit/partner-chains-cli/Cargo.toml
+++ b/toolkit/partner-chains-cli/Cargo.toml
@@ -48,6 +48,9 @@ pallet-governed-map = { workspace = true, features = ["std"] }
 sp-governed-map = { workspace = true, features = ["std"] }
 sidechain-slots = { workspace = true }
 authority-selection-inherents = { workspace = true, features = ["std"] }
+reqwest = { workspace = true }
+indexmap = { workspace = true }
+parity-scale-codec = { workspace = true }
 
 [dev-dependencies]
 frame-system = { workspace = true }
